comment out bottom/fixed so navbar collapses to the content. Still being pushed down a bit by the height attrs of Container and Content

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -221,8 +221,8 @@ html{
   color: #666;
   font-size: 1.25em;
   z-index: 1000;
-  bottom: 0;
-  position: fixed;
+/*  bottom: 0;
+  position: fixed;*/
 }
 
 #footer a{
